--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <title>Index</title>
 </head>
 
 <body>
+    <h1>Index</h1>
     <header>
         <nav class="navegacion">
             <ul class="menu">
-                <li><a href="#">Pagina 1</a></li>
-                <li><a href="#">Pagina 2</a></li>
-                <li><a href="#">Pagina 3</a></li>
+                <li><a href="./Paginas/Pagina1.html">Pagina 1</a></li>
+                <li><a href="./Paginas/Pagina2.html">Pagina 2</a></li>
+                <li><a href="./Paginas/Pagina3.html">Pagina 3</a></li>
             </ul>
         </nav>
     </header>
